[package]
name = "cloudcheck"
version = "8.0.0-rc.1"
edition = "2021"

[dependencies]
radixtarget = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
pyo3 = { version = "0.27", features = ["auto-initialize"], optional = true }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"], optional = true }

[features]
default = ["pyo3"]
pyo3 = ["dep:pyo3", "dep:pyo3-async-runtimes"]

[[bin]]
name = "cloudcheck"
path = "src/main.rs"

[lib]
name = "cloudcheck"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
