[package]
name = "cloudcheck"
version = "8.1.1-rc.1"
edition = "2024"
description = "CloudCheck is a simple Rust tool to check whether an IP address or hostname belongs to a cloud provider."
license = "GPL-3.0"

[dependencies]
radixtarget = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
pyo3 = { version = "0.27", optional = true }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"], optional = true }

[features]
default = []
pyo3 = ["dep:pyo3", "dep:pyo3-async-runtimes"]

[[bin]]
name = "cloudcheck"
path = "src/main.rs"

[lib]
name = "cloudcheck"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
