[package]
name = "cloudcheck"
version = "8.4.4"
edition = "2024"
description = "CloudCheck is a simple Rust tool to check whether an IP address or hostname belongs to a cloud provider."
license = "GPL-3.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
pyo3 = { version = "0.27", optional = true }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"], optional = true }
radixtarget = "4.2"
log = "0.4"
env_logger = "0.11"

[features]
default = []
py = ["dep:pyo3", "dep:pyo3-async-runtimes"]

[[bin]]
name = "cloudcheck"
path = "src/main.rs"

[lib]
name = "cloudcheck"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
