[project]
name = "cloudcheck"
version = "8.0.0rc1"
description = "Detailed database of cloud providers. Instantly look up a domain or IP address"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
]

[tool.poetry.scripts]
cloudcheck-update = 'cloudcheck.cli:main'

[dependency-groups]
dev = [
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "ruff>=0.14.8",
]
