[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cloudcheck"
version = "8.1.0rc1"
description = "Detailed database of cloud providers. Instantly look up a domain or IP address"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "maturin>=1.10.2",
    "pydantic>=2.12.5",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.8",
]

[tool.maturin]
features = ["pyo3"]
module-name = "cloudcheck"
